tests/ui/test_union.stderr
error: union structs are not supported.
 --> $DIR/test_union.rs:4:1
  |
4 | / #[repr(C)]
5 | | union ExampleUnion {
6 | |     f1: u32,
7 | |     f2: f32,
8 | | }
  | |_^
